# arxiv-reader-mcp

./: CONTRIBUTING.md  README.md  main.py  pyproject.toml
arxiv_mcp_server/: server.py
src/: arxiv_api.py
tests/: test_mcp_tools.py  test_parser.py
tests/fixtures/: empty_results.xml  error_entry.xml  malformed.xml  multi_entry.xml  no_pdf.xml  single_entry.xml
